# cloud-drive-sync

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  dev.sh  install.sh
daemon/: README.md  pyproject.toml
daemon/src/cloud_drive_sync/: __init__.py  __main__.py  cli.py  config.py  daemon.py
daemon/src/cloud_drive_sync/auth/: credentials.py  oauth.py
daemon/src/cloud_drive_sync/db/: database.py  models.py
daemon/src/cloud_drive_sync/drive/: changes.py  client.py  mock_client.py  operations.py
daemon/src/cloud_drive_sync/extensions/: install.py  nautilus_overlay.py
daemon/src/cloud_drive_sync/http/: server.py
daemon/src/cloud_drive_sync/http/webui/: index.html
daemon/src/cloud_drive_sync/ipc/: cli_client.py  handlers.py  protocol.py  server.py
daemon/src/cloud_drive_sync/local/: hasher.py  scanner.py  watcher.py
daemon/src/cloud_drive_sync/providers/: __init__.py  base.py  registry.py
daemon/src/cloud_drive_sync/providers/box/: __init__.py  auth.py  changes.py  client.py  operations.py
daemon/src/cloud_drive_sync/providers/dropbox/: __init__.py  auth.py  changes.py  client.py  operations.py
daemon/src/cloud_drive_sync/providers/gdrive/: __init__.py  auth.py  changes.py  client.py  conversion.py  operations.py
daemon/src/cloud_drive_sync/sync/: conflict.py  engine.py  executor.py  planner.py  state.py
daemon/src/cloud_drive_sync/util/: logging.py  paths.py  proxy.py  retry.py  throttle.py
daemon/src/gdrive_sync/: __init__.py  __main__.py  cli.py  config.py  daemon.py
daemon/src/gdrive_sync/auth/: credentials.py  oauth.py
daemon/src/gdrive_sync/db/: database.py  models.py
daemon/src/gdrive_sync/drive/: changes.py  client.py  mock_client.py  operations.py
daemon/src/gdrive_sync/ipc/: handlers.py  server.py
daemon/src/gdrive_sync/local/: hasher.py  scanner.py  watcher.py
daemon/src/gdrive_sync/sync/: conflict.py  engine.py  executor.py  planner.py  state.py
daemon/src/gdrive_sync/util/: logging.py  paths.py  retry.py
daemon/tests/: conftest.py  test_bug_activity_filters.py  test_bug_remote_browser.py  test_bug_stale_data.py  test_bug_status_counts.py  test_bug_sync_trigger.py  test_changes.py  test_config.py  test_conflict.py  test_conflict_resolver.py  test_database.py  test_engine.py  test_executor.py  test_feature_ignore_hidden.py  test_filter_actions.py  test_folder_sync.py  test_handlers.py  test_hasher.py  test_integration.py  test_integration_ipc.py  test_mock_client.py  test_models.py  test_multiple_accounts.py  test_paths.py  test_planner.py  test_priority_fixes.py  test_protocol.py  test_reconnect_and_activity.py  test_retry.py  test_scanner.py  test_selective_sync.py  test_shared_drives.py  test_state.py  test_watcher.py
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: commands.rs  ipc_bridge.rs  main.rs  tray.rs
(+109 files in other folders)
