[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdrive-sync"
version = "0.1.0"
description = "Bidirectional Google Drive sync daemon for Linux"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "watchdog>=4.0.0",
    "aiofiles>=23.2.0",
    "tomli-w>=1.0.0",
    "click>=8.1.0",
    "cryptography>=41.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
gdrive-sync-daemon = "gdrive_sync.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gdrive_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
